# erd_editor

./: .gitignore  README.md  generate-ico.js  generate-icons.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  erd.rs  main.rs
src/components/: Canvas.js  EntityManager.js  RelationManager.js
src/utils/: file-handler.js
