[package]
name = "erd-editor"
version = "0.1.0"
description = "ERD WYSIWYG Editor"
authors = ["ERD Editor Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = [] }
tauri-plugin-dialog = "2.3"
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "erd-editor"
path = "src/main.rs"
